@@ -77,6 +77,7 @@ version <next>:
 - OpenEXR image encoder
 - Simbiosis IMX decoder
 - Simbiosis IMX demuxer
+- TTML subtitle encoder and muxer
 
 
 version 4.3:
